next-cloudinary installed created conversation with messages

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=d79c06545b1c3a925696d5fca586703489e9c58e
 
 GOOGLE_CLIENT_ID=746854600295-68knaluntokral23dvhiol6fepcpokmb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dtxc6pbfi
