--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
