pusher websockets, active status

--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ GOOGLE_CLIENT_ID=746854600295-68knaluntokral23dvhiol6fepcpokmb.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dtxc6pbfi
+
+
+NEXT_PUBLIC_PUSHER_APP_KEY = "40e54001139f5adf336f"
+PUSHER_APP_ID= "1732336"
+PUSHER_SECRET = "bdd3dd97bea502a69c74"
+
